@@ -4,7 +4,8 @@ Changes
 0.33.x (unreleased)
 -------------------
 
- * networkcache: only match major release number in debian [Marco Mariani]
+ * networkcache: only match major release number in Debian,
+                 fixed platform detection for Ubuntu [Marco Mariani]
  * slapproxy: Filter by instance_guid, allow computer partition renames
               and change of software_type and requested_state [Marco Mariani]
  * slapproxy: Stop instance even if buildout/reporting is wrong [Cedric de Saint Martin]
